--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -5,8 +5,11 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=https://+:443;http://+:80
+      - ConnectionString=Data Source=sqlserverService;Database=SchoolDb/;User Id=sa;Password=BigPassw0rd
     ports:
-      - "80"
-      - "443"
+      - "49630:80"
+      - "49631:443"
     volumes:
-      - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
+    - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
+    - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
+ 
